# LightFieldLab

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  cloc_exclude.txt  count_lines.bat  count_lines.sh  install.cmake  main.cpp  mainwindow.ui
core/: StreamRedirector.h  USBConfiguration.h  USBConfiguration.lib  awb.cu  bin_io.h  califinder.cpp  califinder.h  ccm.cu  ccm_gc.cu  centers_extract.cpp  centers_extract.h  centers_sort.cpp  centers_sort.h  colormatcher.cpp  colormatcher.cu  colormatcher.h  config.cpp  config.h  distgdisp.cpp  distgdisp.h  distgssr.cpp  distgssr.h  dpc.cu  epit.cpp  epit.h  ft602.h  gc.cu  hexgrid_fit.cpp  hexgrid_fit.h  isp.hpp  lfcalibrate.cpp  lfcalibrate.h  lfcapture.cpp  lfcapture.h  lfcontroller.cpp  lfcontroller.h  lfdata.h  lfde.cpp  lfde.h  lfdepth.cpp  (+36 more)
data/: DistgDisp_9x9.onnx  DistgDisp_9x9_128_FP16.engine  DistgDisp_9x9_196_FP16.engine  DistgSSR_2x_1x1x640x640_FP16_Windows.engine  DistgSSR_2x_1x1x980x980_FP16.engine  DistgSSR_2x_5x5.onnx  DistgSSR_4x_1x1x640x640_FP16.engine  DistgSSR_4x_1x1x980x980_FP16.engine  DistgSSR_4x_5x5.onnx  EPIT_2x_5x5.onnx  EPIT_4x_1x1x5x5x64x64_FP32.engine  MOD_0015.TXT  MOD_0015.json  OACC-Net_128.onnx  OACC-Net_128_FP16_Linux.engine  books.json  books.lfr  config.json  save.json  test_data.json  toy.json
include/: Controller.h  interface.h  lfdata.h  lfload.h  lfloader.h  lfprocessor.h  lfrefocus.h  lfrefocuser.h  lfsuperres.h  mainwindow.h  pch.h  qlfapi.h  qlfprocessor.h  refocus.h  ui.h  window_base.h  worker_base.h  worker_interface.h
models/: DistgDisp.pth.tar  DistgDisp.py  DistgDisp_9x9_128_FP16_Linux.engine  DistgDisp_9x9_128_FP16_Windows.engine  DistgDisp_9x9_196_FP16_Linux.engine  DistgDisp_9x9_196_FP16_Windows.engine  DistgSSR.py  DistgSSR_2x_1x1x640x640_FP16_Linux.engine  DistgSSR_2x_1x1x980x980_FP16_Linux.engine  DistgSSR_4x_1x1x640x640_FP16_Linux.engine  DistgSSR_4x_1x1x980x980_FP16_Linux.engine  EPIT.py  EPIT_2x_1x1x5x5x64x64_FP32_Windows.engine  EPIT_2x_5x5.pth  EPIT_4x_5x5.onnx  OACC-Net.pth.tar  OACC-Net.py  OACC-Net_196.onnx  OACC-Net_196_FP16_Linux.engine  OACC-Net_9x9.onnx  OACC-Net_9x9_128_FP16_Windows.engine  OACC-Net_9x9_196_FP16_Windows.engine  utils.py
python/: DistgSSR.py  DistgSSR_2x_5x5.pth.tar  DistgSSR_4x_5x5.pth.tar  EPIT.py  EPIT_4x_5x5.pth  LFSSR.py  LFSSR_2x_7x7.pth  LFSSR_4x_7x7.pth  export_onnx_all.py
src/: Controller.cpp  lfload.cpp  lfloader.cpp  lfprocessor.cpp  lfrefocus.cpp  lfrefocuser.cpp  lfsuperres.cpp  main.cpp  mainwindow.cpp  qlfprocessor.cpp  refocus.cpp  ui.cpp
test/: CMakeLists.txt  test.cpp  test_future.cpp  test_lfloader.cpp  test_lfprocessor.cpp  test_lfsuperres.cpp  test_loader.cpp  test_metal.cpp  test_openssl.cpp  test_readraw.cpp  test_refocus.cpp  test_refocuser.cpp  test_ui.cpp  test_window_base.cpp
tests/: CMakeLists.txt  test.cpp  test_brisque_comp.cpp  test_config.cpp  test_distgdisp.cpp  test_distgssr_onnx.cpp  test_distgssr_trt.cpp  test_epit.cpp  test_future.cpp  test_isp.cpp  test_json.cpp  test_lfcalibrate.cpp  test_lfde.cpp  test_lfdepth.cpp  test_lfload.cpp  test_lfloader.cpp  test_lfrefocus.cpp  test_lfresample.cpp  test_lfsuperres.cpp  test_libraw.cpp  test_log.cpp  test_metal.cpp  test_openssl.cpp  test_readraw.cpp  test_refocuser.cpp  test_trtcli.cpp  test_ui.cpp  test_window_base.cpp
ui/: dialogccm.cpp  dialogccm.h  dialogccm.ui  dialogwbgains.cpp  dialogwbgains.h  dialogwbgains.ui  interactiveview.cpp  interactiveview.h  lfcontrol.cpp  lfcontrol.h  lightfieldlab.cpp  lightfieldlab.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qlfapi.h  qlogger.h  smartimageviewer.cpp  smartimageviewer.h  smartimageviewer.ui  ui.cpp  ui.h  widgetcontrol.cpp  widgetcontrol.h  widgetcontrol.ui  widgetimage.cpp  widgetimage.h  widgetimage.ui  widgetimage.ui.autosave  widgetlogger.cpp  widgetlogger.h  widgetlogger.ui
